# cloudgeometer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: dev.yml
config/: ahn-dsm05.yml  bm-2024O-rgb.yml
resources/: README.md
src/cloudgeometer/: cli.py  config.py  filesystem.py  task.py
src/cloudgeometer/converters/: __init__.py  base.py  cog.py  gdal.py  geotiff.py  registry.py  shell.py  stac.py  vrt.py
