[project]
authors = [{name = "Francesco Nattino", email = "f.nattino@esciencecenter.nl"}]
dependencies = ["click>=8.4.1,<9", "fsspec>=2026.6.0,<2027", "s3fs>=2026.6.0,<2027", "pyyaml>=6.0.3,<7"]
name = "cloudgeometer"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
cloudgeometer = "cloudgeometer.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cloudgeometer = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.6,<3.15"
gdal = ">=3.13.1,<4"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
default = { solve-group = "default" }

[dependency-groups]
dev = ["pytest", "ruff"]

