[project]
authors = [{name = "Francesco Nattino", email = "f.nattino@esciencecenter.nl"}]
dependencies = ["click>=8.4.1,<9", "fsspec>=2026.6.0,<2027", "s3fs>=2026.6.0,<2027", "pyyaml>=6.0.3,<7", "rio-stac>=0.12.0,<0.13", "pystac>=1.14.3,<2", "obstore>=0.10.1,<0.11", "rustac>=0.9.12,<0.10"]
name = "cloudgeometer"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
cloudgeometer = "cloudgeometer.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
cloudgeometer = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.6,<3.15"
gdal = ">=3.13.1,<4"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
default = { solve-group = "default" }

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
lint.select = [
    "D",  # pydocstyle
    "E",  # pycodestyle
    "W",
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]
lint.ignore = [
    "D100", "D101", "D104", "D105", "D106", "D107", "D203", "D213", "D413",
]
lint.extend-per-file-ignores = { "tests/**" = ["D103"]}  # Missing docstring in public function
